--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <title>Pong Game</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
-  <body>
-    <div id="game-container">
-      <div id="paddleA"></div>
-      <div id="paddleB"></div>
-      <div id="ball"></div>
+</head>
+<body>
+    <div class="container">
+        <canvas id="gameCanvas"></canvas>
+        <div id="score">Score: 0</div>
     </div>
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
